--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header>
         <div class="banner" style="background-image: url('images/raftingbanner.jpg'); background-size: cover; opacity:1">
             <div style="opacity:4">
-            <h1>Thopal Khola Site Plan</h1>
-            <h2>Sponsor By:Krishna Nepali</h2>
+            <h1 style="color:white">Thopal Khola Site Plan</h1> <!--I want to change just a one specific element-->
+            <h2>Sponsored By L.G. company PVT. LTD.</h2>
             <h3>WDD 130-03</h3>
             <h4>Email:krishanepalip90x@gmail.com</h4>
                 <!--<br> is for line scape-->
             <br><br><br><br><!--for new line-->
             <img src="./images/sunshine_thopalkhola_rafting.png" alt="logo" height="90" width="90">
-            <h3>WDD 130-03<br> Email:krishanepalip90x@gmail.com</h3>
+            <h3>The best rafting in Nepal<br>Hurry-up Limit seats only</h3>
             <nav>
                 <a href="index.html"> Home page </a>
                 <a href="rafting.html"> Rafting information </a>
