--- a/rafting.html
+++ b/rafting.html
@@ -9,12 +9,13 @@
 
 <body>
     <header>
-        <div class="banner" style="background-image: url('images/RiverFun.jpg'); background-size: cover; opacity:0.6">
-            <div style="opacity:1">
+        <!--<img src="./images/sunshine_thopalkhola_rafting.png" alt="logo" height="90" width="90">-->
+        <div class="banner" style="background-image: url('images/trisuli_resort.jpg');background-size:cover; opacity:1">
+            <div style="opacity:4">
             <h1>Thopal Khola Site Plan</h1>
             <h2>Krishna Nepali</h2>
             <h2>WDD 130-03</h2>
-            <nav>
+            <nav style="color:white">
                 <a href="index.html"> Home page </a>
                 <a href="rafting.html"> Rafting information </a>
                 <a href="Gallery.html"> Gallery </a>
