--- a/rafting.html
+++ b/rafting.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <!--<img src="./images/sunshine_thopalkhola_rafting.png" alt="logo" height="90" width="90">-->
-        <div class="banner" style="background-image: url('images/trisuli_resort.jpg');background-size:cover; opacity:1">
+        <div class="banner" style="background-image: url('images/trisuli_resort.jpg');background:size cover; opacity:1" Size="1600px">
             <div style="opacity:4">
             <h1>Thopal Khola Site Plan</h1>
             <h2>Krishna Nepali</h2>
