--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <div class="banner" style="background-image: url('images/raftingbanner.jpg'); background-size: cover; opacity:1" size:1600px>
+        <div class="banner" style="background-image: url('images/raftingbanner.jpg'); background-size: cover; opacity:1">
             <div style="opacity:4">
             <h1 style="color:white">Thopal Khola Site Plan</h1> <!--I want to change just a one specific element-->
             <h2>Sponsored By L.G. company PVT. LTD.</h2>
